--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -128,6 +128,12 @@ ul.mobile-menu-view {
 a.menubar {
     font-size: 30px;
     color: #fff;
-    margin-top: 20px;
-    display: block;
+    display: none;
+    position: absolute;
+    right: 15px;
+    top: 40px;
+    z-index: 9;
+}
+.mobile-login-form{
+	display: none;
 }
