--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -5,17 +5,8 @@
 }
 /* Tablet Layout: 768px. */
 @media only screen and (min-width: 768px) and (max-width: 991px) { 
- 
-    
-}
-/* Mobile Layout: 320px. */
-@media only screen and (max-width: 767px) { 
  .logo img {
     height: 100px;
-}
-
-.logo {
-    text-align: center;
 }
 
 .mainmenu.text-right {
@@ -88,8 +79,127 @@ input#jackpott {
 	margin-bottom: 18px;
 	display: block;
 }
+a.menubar {
+    display: block;
+}
+.mobile-login-form{
+	display: block;
+}
+.mobile-login-form input {
+    width: 100%;
+    margin-top: 12px;
+    padding: 6px 20px;
+}
 
+a.submit-btn {
+    width: 100%;
+    text-align: center;
+}
 
+a.dafter-btn {
+    width: 100%;
+    text-align: center;
+}
+
+    
+}
+/* Mobile Layout: 320px. */
+@media only screen and (max-width: 767px) { 
+ .logo img {
+    height: 100px;
+}
+
+.mainmenu.text-right {
+    display: none;
+}
+
+.social-contact {
+    display: none;
+}
+
+.social:after {
+    display: none;
+}
+
+.running-text marquee {
+    background: #000;
+    padding: 5px 0;
+    border: 1px solid #940000;
+}
+
+.hero-slide {
+    width: 100%;
+    float: none;
+}
+
+.login-form {
+    display: none;
+}
+.jack {
+    height: auto;
+    background: none;
+}
+
+input#jackpot {
+    width: 100%;
+    font-size: 30px;
+    background-image: url(../img/poker.png);
+    background-size: 100% 100%;
+    border-radius: 10px;
+    padding-right: 30px;
+}
+
+input#jackpott {
+    width: 100%;
+    padding: 0;
+    font-size: 30px;
+    background-image: url(../img/domino.png);
+    background-size: 100% 100%;
+    border-radius: 10px;
+    padding-left: 30px;
+}
+.deposit-left, .deposit-right {
+    padding: 0;
+    text-align: center;
+    margin-top: 30px;
+}
+.deposit-left{
+	background-image: url(../img/depo-bg.png);
+	background-size: 100% 100%;
+    height: 300px;
+    padding-top: 75px;
+}
+.deposit-right{
+	background-image: url(../img/withdraw-bg.png);
+	background-size: 100% 100%;
+    height: 300px;
+    padding-top: 75px;
+}
+.deposit-left p, .deposit-right p{
+	margin-bottom: 18px;
+	display: block;
+}
+a.menubar {
+    display: block;
+}
+.mobile-login-form{
+	display: block;
+}
+.mobile-login-form input {
+    width: 100%;
+    margin-top: 12px;
+    padding: 6px 20px;
+}
+
+a.submit-btn {
+    width: 100%;
+    text-align: center;
+}
+
+a.dafter-btn {
+    width: 100%;
+    text-align: center;
+}
 
 
 
